--- a/package.json
+++ b/package.json
@@ -121,6 +121,8 @@
         ]
     },
     "dependencies": {
-        "@websanova/vue-auth": "^2.21.16-beta"
+        "@websanova/vue-auth": "^2.21.16-beta",
+        "vue-organization-chart": "^1.1.6",
+        "vue-search-select": "^2.9.3"
     }
 }
