--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -69,5 +69,16 @@
     "/entry-point.f3fed98fa0dbf2069f1f.hot-update.js": "/entry-point.f3fed98fa0dbf2069f1f.hot-update.js",
     "/entry-point.cd135c3ad515b9e280ca.hot-update.js": "/entry-point.cd135c3ad515b9e280ca.hot-update.js",
     "/entry-point.3ec3911b719b530ca393.hot-update.js": "/entry-point.3ec3911b719b530ca393.hot-update.js",
-    "/entry-point.cbb98ed5f1464d92073d.hot-update.js": "/entry-point.cbb98ed5f1464d92073d.hot-update.js"
+    "/entry-point.cbb98ed5f1464d92073d.hot-update.js": "/entry-point.cbb98ed5f1464d92073d.hot-update.js",
+    "/entry-point.95c0f560bafe7fbd9ea5.hot-update.js": "/entry-point.95c0f560bafe7fbd9ea5.hot-update.js",
+    "/entry-point.5b2dca3511b358e136ed.hot-update.js": "/entry-point.5b2dca3511b358e136ed.hot-update.js",
+    "/entry-point.ffc7f074a221aa309b94.hot-update.js": "/entry-point.ffc7f074a221aa309b94.hot-update.js",
+    "/entry-point.464766be0c93f2f10c63.hot-update.js": "/entry-point.464766be0c93f2f10c63.hot-update.js",
+    "/entry-point.4fcb7cdfb5624bc8805c.hot-update.js": "/entry-point.4fcb7cdfb5624bc8805c.hot-update.js",
+    "/entry-point.44777f87e8aa907a9361.hot-update.js": "/entry-point.44777f87e8aa907a9361.hot-update.js",
+    "/entry-point.fbf1b677b41c594314a4.hot-update.js": "/entry-point.fbf1b677b41c594314a4.hot-update.js",
+    "/entry-point.99b872e43fe59ea0eb3f.hot-update.js": "/entry-point.99b872e43fe59ea0eb3f.hot-update.js",
+    "/entry-point.da7193c4482b5d80bbe3.hot-update.js": "/entry-point.da7193c4482b5d80bbe3.hot-update.js",
+    "/entry-point.35b41161c95b6c9c7886.hot-update.js": "/entry-point.35b41161c95b6c9c7886.hot-update.js",
+    "/entry-point.606b4fcda609f257a5e2.hot-update.js": "/entry-point.606b4fcda609f257a5e2.hot-update.js"
 }
