--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -41,11 +41,5 @@
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff",
-    "/entry-point.feae64977a6b5e4729a1.hot-update.js": "/entry-point.feae64977a6b5e4729a1.hot-update.js",
-    "/entry-point.e4c1a20eac77358e7a7d.hot-update.js": "/entry-point.e4c1a20eac77358e7a7d.hot-update.js",
-    "/entry-point.0c1562ee6759e214b990.hot-update.js": "/entry-point.0c1562ee6759e214b990.hot-update.js",
-    "/entry-point.1c0d4f3d09159298fead.hot-update.js": "/entry-point.1c0d4f3d09159298fead.hot-update.js",
-    "/entry-point.ded686f02fdfd452fb16.hot-update.js": "/entry-point.ded686f02fdfd452fb16.hot-update.js",
-    "/entry-point.57975c4bfc556861760e.hot-update.js": "/entry-point.57975c4bfc556861760e.hot-update.js"
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff"
 }
