--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -41,5 +41,16 @@
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff"
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff",
+    "/entry-point.0f2af28bdff43425b3ac.hot-update.js": "/entry-point.0f2af28bdff43425b3ac.hot-update.js",
+    "/entry-point.7203c26fe8d6e358860f.hot-update.js": "/entry-point.7203c26fe8d6e358860f.hot-update.js",
+    "/entry-point.ef27a53576e41faffc1b.hot-update.js": "/entry-point.ef27a53576e41faffc1b.hot-update.js",
+    "/entry-point.f79e34e454dfe07873b6.hot-update.js": "/entry-point.f79e34e454dfe07873b6.hot-update.js",
+    "/entry-point.2d4f93108b590112f4b9.hot-update.js": "/entry-point.2d4f93108b590112f4b9.hot-update.js",
+    "/entry-point.0c81d6b608983ca578dd.hot-update.js": "/entry-point.0c81d6b608983ca578dd.hot-update.js",
+    "/entry-point.96418708ad42607a25cf.hot-update.js": "/entry-point.96418708ad42607a25cf.hot-update.js",
+    "/entry-point.023c9d785a5bd9ede0d3.hot-update.js": "/entry-point.023c9d785a5bd9ede0d3.hot-update.js",
+    "/entry-point.ff6a4c0c290538ed7794.hot-update.js": "/entry-point.ff6a4c0c290538ed7794.hot-update.js",
+    "/entry-point.63899946e9c4a2a37922.hot-update.js": "/entry-point.63899946e9c4a2a37922.hot-update.js",
+    "/entry-point.40dc9e2cb01120ee8ea0.hot-update.js": "/entry-point.40dc9e2cb01120ee8ea0.hot-update.js"
 }
