--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.29",
+        "phpoffice/phpword": "^0.17.0",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
