--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -41,5 +41,13 @@
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff"
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff",
+    "/entry-point.ceb9c69ac6430a936622.hot-update.js": "/entry-point.ceb9c69ac6430a936622.hot-update.js",
+    "/entry-point.8f2b2efa41b2b4f36043.hot-update.js": "/entry-point.8f2b2efa41b2b4f36043.hot-update.js",
+    "/entry-point.9deaec551cf5b2aa0425.hot-update.js": "/entry-point.9deaec551cf5b2aa0425.hot-update.js",
+    "/entry-point.3d284d01f5d4fb0c0d62.hot-update.js": "/entry-point.3d284d01f5d4fb0c0d62.hot-update.js",
+    "/entry-point.89e571e8a45a6bba71e1.hot-update.js": "/entry-point.89e571e8a45a6bba71e1.hot-update.js",
+    "/entry-point.11f98a1f90b554d7f003.hot-update.js": "/entry-point.11f98a1f90b554d7f003.hot-update.js",
+    "/entry-point.f9b39b1d55929c991d04.hot-update.js": "/entry-point.f9b39b1d55929c991d04.hot-update.js",
+    "/entry-point.5cf60f9e193c1af5c59e.hot-update.js": "/entry-point.5cf60f9e193c1af5c59e.hot-update.js"
 }
