--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -41,8 +41,5 @@
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff",
-    "/entry-point.0c6ca8410d330053faa1.hot-update.js": "/entry-point.0c6ca8410d330053faa1.hot-update.js",
-    "/entry-point.84f3554741bc9d30c251.hot-update.js": "/entry-point.84f3554741bc9d30c251.hot-update.js",
-    "/entry-point.71cc64f63cfce2d212c3.hot-update.js": "/entry-point.71cc64f63cfce2d212c3.hot-update.js"
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff"
 }
