--- a/public/web.config
+++ b/public/web.config
@@ -22,7 +22,41 @@
           </conditions>
           <action type="Rewrite" url="index.php" />
         </rule>
+	<rule name="HTTP to HTTPS redirect" stopProcessing="true">
+  <match url="(.*)" />
+    <conditions>
+      <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+    </conditions>
+  <action type="Redirect" redirectType="Found" url="https://{HTTP_HOST}/{R:1}" />
+</rule>
       </rules>
     </rewrite>
+        <cors enabled="true">
+            <add origin="http://localhost:3000" allowCredentials="true">
+                <allowHeaders allowAllRequestedHeaders="true" />
+                <allowMethods>
+                    <add method="GET" />
+                    <add method="POST" />
+                    <add method="PUT" />
+                    <add method="DELETE" />
+                    <add method="OPTIONS" />
+                </allowMethods>
+            </add>
+            <add origin="https://test.emiit.ru" allowCredentials="true">
+                <allowHeaders allowAllRequestedHeaders="true" />
+                <allowMethods>
+                    <add method="GET" />
+                    <add method="POST" />
+                    <add method="PUT" />
+                    <add method="DELETE" />
+                    <add method="OPTIONS" />
+                </allowMethods>
+            </add>
+        </cors>
+        <staticContent>
+            <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+            <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+            <mimeMap fileExtension=".json" mimeType="application/json" />
+        </staticContent>
   </system.webServer>
 </configuration>
