--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/entry-point.abc616837826256b793d.js": "/entry-point.abc616837826256b793d.js?id=591acbb535c1024fb442",
+    "/entry-point.js": "/entry-point.js?id=71d734a6110ef8921dab",
     "/vendor/js/layout-helpers.js": "/vendor/js/layout-helpers.js?id=434733e06601de28dec3",
     "/vendor/js/material-ripple.js": "/vendor/js/material-ripple.js?id=e368ea90516d2b6a8f13",
     "/vendor/js/theme-settings.js": "/vendor/js/theme-settings.js?id=cb3690be732ae2187fb9",
@@ -8,38 +8,38 @@
     "/vendor/fonts/linearicons.css": "/vendor/fonts/linearicons.css?id=1b90e35f30f3fc776428",
     "/vendor/fonts/open-iconic.css": "/vendor/fonts/open-iconic.css?id=76198f59f3176045bd15",
     "/vendor/fonts/pe-icon-7-stroke.css": "/vendor/fonts/pe-icon-7-stroke.css?id=7ea817954e417021979f",
-    "/vendor/fonts/fontawesome/fa-brands-400.eot": "/vendor/fonts/fontawesome/fa-brands-400.eot?id=8e5be116f022537b1a9e",
+    "/vendor/fonts/fontawesome/fa-brands-400.eot": "/vendor/fonts/fontawesome/fa-brands-400.eot?id=d2e731e10fea4e427402",
     "/vendor/fonts/fontawesome/fa-brands-400.svg": "/vendor/fonts/fontawesome/fa-brands-400.svg?id=575f579783279183e047",
-    "/vendor/fonts/fontawesome/fa-brands-400.ttf": "/vendor/fonts/fontawesome/fa-brands-400.ttf?id=58b0c10e000748053f4f",
-    "/vendor/fonts/fontawesome/fa-brands-400.woff": "/vendor/fonts/fontawesome/fa-brands-400.woff?id=6b5bf8cfb4951b248fca",
-    "/vendor/fonts/fontawesome/fa-brands-400.woff2": "/vendor/fonts/fontawesome/fa-brands-400.woff2?id=902ad63c93778bbbe204",
-    "/vendor/fonts/fontawesome/fa-regular-400.eot": "/vendor/fonts/fontawesome/fa-regular-400.eot?id=ee0263af0da6ecd32089",
+    "/vendor/fonts/fontawesome/fa-brands-400.ttf": "/vendor/fonts/fontawesome/fa-brands-400.ttf?id=4bafb985d87d58660750",
+    "/vendor/fonts/fontawesome/fa-brands-400.woff": "/vendor/fonts/fontawesome/fa-brands-400.woff?id=4556f6c1f07cbeb1cf4e",
+    "/vendor/fonts/fontawesome/fa-brands-400.woff2": "/vendor/fonts/fontawesome/fa-brands-400.woff2?id=4779f97715fbefb8e61a",
+    "/vendor/fonts/fontawesome/fa-regular-400.eot": "/vendor/fonts/fontawesome/fa-regular-400.eot?id=5bdd726831e895f0084c",
     "/vendor/fonts/fontawesome/fa-regular-400.svg": "/vendor/fonts/fontawesome/fa-regular-400.svg?id=251662c979749ba1b44c",
-    "/vendor/fonts/fontawesome/fa-regular-400.ttf": "/vendor/fonts/fontawesome/fa-regular-400.ttf?id=016791d53ce3f03441c3",
-    "/vendor/fonts/fontawesome/fa-regular-400.woff": "/vendor/fonts/fontawesome/fa-regular-400.woff?id=b5766fa5183261faf025",
-    "/vendor/fonts/fontawesome/fa-regular-400.woff2": "/vendor/fonts/fontawesome/fa-regular-400.woff2?id=03aa5f7048ece9f8c555",
-    "/vendor/fonts/fontawesome/fa-solid-900.eot": "/vendor/fonts/fontawesome/fa-solid-900.eot?id=06dad1090bf968e59107",
+    "/vendor/fonts/fontawesome/fa-regular-400.ttf": "/vendor/fonts/fontawesome/fa-regular-400.ttf?id=185cc578c53a4a941413",
+    "/vendor/fonts/fontawesome/fa-regular-400.woff": "/vendor/fonts/fontawesome/fa-regular-400.woff?id=5feb7af7ec8add348413",
+    "/vendor/fonts/fontawesome/fa-regular-400.woff2": "/vendor/fonts/fontawesome/fa-regular-400.woff2?id=dd79e9eedbd3e8f6d5c8",
+    "/vendor/fonts/fontawesome/fa-solid-900.eot": "/vendor/fonts/fontawesome/fa-solid-900.eot?id=bcad32e64aa0abf1da8a",
     "/vendor/fonts/fontawesome/fa-solid-900.svg": "/vendor/fonts/fontawesome/fa-solid-900.svg?id=34713e5ffae547002760",
-    "/vendor/fonts/fontawesome/fa-solid-900.ttf": "/vendor/fonts/fontawesome/fa-solid-900.ttf?id=9d5a3dcfd0e683e476a4",
-    "/vendor/fonts/fontawesome/fa-solid-900.woff": "/vendor/fonts/fontawesome/fa-solid-900.woff?id=c640f3305d6baed26d81",
-    "/vendor/fonts/fontawesome/fa-solid-900.woff2": "/vendor/fonts/fontawesome/fa-solid-900.woff2?id=743423887f20ef541bdf",
-    "/vendor/fonts/ionicons/ionicons.eot": "/vendor/fonts/ionicons/ionicons.eot?id=7c5cd790981df8ad4c02",
+    "/vendor/fonts/fontawesome/fa-solid-900.ttf": "/vendor/fonts/fontawesome/fa-solid-900.ttf?id=2616cbd9d08bce7e0dbc",
+    "/vendor/fonts/fontawesome/fa-solid-900.woff": "/vendor/fonts/fontawesome/fa-solid-900.woff?id=33931c0ff7b0df5a4e46",
+    "/vendor/fonts/fontawesome/fa-solid-900.woff2": "/vendor/fonts/fontawesome/fa-solid-900.woff2?id=19086e2e63c5c805fc98",
+    "/vendor/fonts/ionicons/ionicons.eot": "/vendor/fonts/ionicons/ionicons.eot?id=1614689776061139f9bc",
     "/vendor/fonts/ionicons/ionicons.svg": "/vendor/fonts/ionicons/ionicons.svg?id=71148788db809df3496f",
-    "/vendor/fonts/ionicons/ionicons.ttf": "/vendor/fonts/ionicons/ionicons.ttf?id=1a569411662997e2b849",
-    "/vendor/fonts/ionicons/ionicons.woff": "/vendor/fonts/ionicons/ionicons.woff?id=57c34e413a7ff3503354",
-    "/vendor/fonts/ionicons/ionicons.woff2": "/vendor/fonts/ionicons/ionicons.woff2?id=9a80c12757705b51eb8a",
-    "/vendor/fonts/linearicons/Linearicons-Free.eot": "/vendor/fonts/linearicons/Linearicons-Free.eot?id=7b72309f7fab12e0c188",
+    "/vendor/fonts/ionicons/ionicons.ttf": "/vendor/fonts/ionicons/ionicons.ttf?id=3eee77cb739fee32c170",
+    "/vendor/fonts/ionicons/ionicons.woff": "/vendor/fonts/ionicons/ionicons.woff?id=c89939211072943380d1",
+    "/vendor/fonts/ionicons/ionicons.woff2": "/vendor/fonts/ionicons/ionicons.woff2?id=eac2de05c13d2b0f4ab4",
+    "/vendor/fonts/linearicons/Linearicons-Free.eot": "/vendor/fonts/linearicons/Linearicons-Free.eot?id=cc6bc0d2c43b220f59e9",
     "/vendor/fonts/linearicons/Linearicons-Free.svg": "/vendor/fonts/linearicons/Linearicons-Free.svg?id=fb9ed10858b2625b61bd",
-    "/vendor/fonts/linearicons/Linearicons-Free.ttf": "/vendor/fonts/linearicons/Linearicons-Free.ttf?id=f2f253ebf3515a812e91",
-    "/vendor/fonts/linearicons/Linearicons-Free.woff": "/vendor/fonts/linearicons/Linearicons-Free.woff?id=5e3e200505fc8c59be31",
-    "/vendor/fonts/linearicons/Linearicons-Free.woff2": "/vendor/fonts/linearicons/Linearicons-Free.woff2?id=e5240b31e930efb46871",
-    "/vendor/fonts/open-iconic/open-iconic.eot": "/vendor/fonts/open-iconic/open-iconic.eot?id=12e0048c17015001b24d",
-    "/vendor/fonts/open-iconic/open-iconic.otf": "/vendor/fonts/open-iconic/open-iconic.otf?id=2abff499cb698b5196aa",
+    "/vendor/fonts/linearicons/Linearicons-Free.ttf": "/vendor/fonts/linearicons/Linearicons-Free.ttf?id=3526f8ef3477cc11d112",
+    "/vendor/fonts/linearicons/Linearicons-Free.woff": "/vendor/fonts/linearicons/Linearicons-Free.woff?id=a96ea49f93c3c86367cd",
+    "/vendor/fonts/linearicons/Linearicons-Free.woff2": "/vendor/fonts/linearicons/Linearicons-Free.woff2?id=88d4179ea7cab95a831e",
+    "/vendor/fonts/open-iconic/open-iconic.eot": "/vendor/fonts/open-iconic/open-iconic.eot?id=261223120fd94a8231c3",
+    "/vendor/fonts/open-iconic/open-iconic.otf": "/vendor/fonts/open-iconic/open-iconic.otf?id=7feabb50dff1f7fdffaa",
     "/vendor/fonts/open-iconic/open-iconic.svg": "/vendor/fonts/open-iconic/open-iconic.svg?id=8217b7ac84b409b12968",
-    "/vendor/fonts/open-iconic/open-iconic.ttf": "/vendor/fonts/open-iconic/open-iconic.ttf?id=257ea4bb2a58e9a1d2f1",
-    "/vendor/fonts/open-iconic/open-iconic.woff": "/vendor/fonts/open-iconic/open-iconic.woff?id=fd20c1cd3c9abfabe0ba",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot?id=dc784df262dfe00ad4e9",
+    "/vendor/fonts/open-iconic/open-iconic.ttf": "/vendor/fonts/open-iconic/open-iconic.ttf?id=12617a297de9177eaf8d",
+    "/vendor/fonts/open-iconic/open-iconic.woff": "/vendor/fonts/open-iconic/open-iconic.woff?id=437a806ffec84cc6170e",
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot?id=710009ebd3dadaf70b8a",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg?id=529c3da8f21edf912d26",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf?id=23f2d673dcd7b6ba52bd",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff?id=85499d365c0c2ce3ad9d"
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf?id=366b11c59c8c1f0bdee6",
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff?id=b343d2f7fb9a7f55f98a"
 }
