--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,45 +1,45 @@
 {
-    "/entry-point.js": "/entry-point.js?id=71d734a6110ef8921dab",
-    "/vendor/js/layout-helpers.js": "/vendor/js/layout-helpers.js?id=434733e06601de28dec3",
-    "/vendor/js/material-ripple.js": "/vendor/js/material-ripple.js?id=e368ea90516d2b6a8f13",
-    "/vendor/js/theme-settings.js": "/vendor/js/theme-settings.js?id=cb3690be732ae2187fb9",
-    "/vendor/fonts/fontawesome.css": "/vendor/fonts/fontawesome.css?id=ea5cc48f32a2f4ec30fd",
-    "/vendor/fonts/ionicons.css": "/vendor/fonts/ionicons.css?id=692e38adbc9fe6369b70",
-    "/vendor/fonts/linearicons.css": "/vendor/fonts/linearicons.css?id=1b90e35f30f3fc776428",
-    "/vendor/fonts/open-iconic.css": "/vendor/fonts/open-iconic.css?id=76198f59f3176045bd15",
-    "/vendor/fonts/pe-icon-7-stroke.css": "/vendor/fonts/pe-icon-7-stroke.css?id=7ea817954e417021979f",
-    "/vendor/fonts/fontawesome/fa-brands-400.eot": "/vendor/fonts/fontawesome/fa-brands-400.eot?id=d2e731e10fea4e427402",
-    "/vendor/fonts/fontawesome/fa-brands-400.svg": "/vendor/fonts/fontawesome/fa-brands-400.svg?id=575f579783279183e047",
-    "/vendor/fonts/fontawesome/fa-brands-400.ttf": "/vendor/fonts/fontawesome/fa-brands-400.ttf?id=4bafb985d87d58660750",
-    "/vendor/fonts/fontawesome/fa-brands-400.woff": "/vendor/fonts/fontawesome/fa-brands-400.woff?id=4556f6c1f07cbeb1cf4e",
-    "/vendor/fonts/fontawesome/fa-brands-400.woff2": "/vendor/fonts/fontawesome/fa-brands-400.woff2?id=4779f97715fbefb8e61a",
-    "/vendor/fonts/fontawesome/fa-regular-400.eot": "/vendor/fonts/fontawesome/fa-regular-400.eot?id=5bdd726831e895f0084c",
-    "/vendor/fonts/fontawesome/fa-regular-400.svg": "/vendor/fonts/fontawesome/fa-regular-400.svg?id=251662c979749ba1b44c",
-    "/vendor/fonts/fontawesome/fa-regular-400.ttf": "/vendor/fonts/fontawesome/fa-regular-400.ttf?id=185cc578c53a4a941413",
-    "/vendor/fonts/fontawesome/fa-regular-400.woff": "/vendor/fonts/fontawesome/fa-regular-400.woff?id=5feb7af7ec8add348413",
-    "/vendor/fonts/fontawesome/fa-regular-400.woff2": "/vendor/fonts/fontawesome/fa-regular-400.woff2?id=dd79e9eedbd3e8f6d5c8",
-    "/vendor/fonts/fontawesome/fa-solid-900.eot": "/vendor/fonts/fontawesome/fa-solid-900.eot?id=bcad32e64aa0abf1da8a",
-    "/vendor/fonts/fontawesome/fa-solid-900.svg": "/vendor/fonts/fontawesome/fa-solid-900.svg?id=34713e5ffae547002760",
-    "/vendor/fonts/fontawesome/fa-solid-900.ttf": "/vendor/fonts/fontawesome/fa-solid-900.ttf?id=2616cbd9d08bce7e0dbc",
-    "/vendor/fonts/fontawesome/fa-solid-900.woff": "/vendor/fonts/fontawesome/fa-solid-900.woff?id=33931c0ff7b0df5a4e46",
-    "/vendor/fonts/fontawesome/fa-solid-900.woff2": "/vendor/fonts/fontawesome/fa-solid-900.woff2?id=19086e2e63c5c805fc98",
-    "/vendor/fonts/ionicons/ionicons.eot": "/vendor/fonts/ionicons/ionicons.eot?id=1614689776061139f9bc",
-    "/vendor/fonts/ionicons/ionicons.svg": "/vendor/fonts/ionicons/ionicons.svg?id=71148788db809df3496f",
-    "/vendor/fonts/ionicons/ionicons.ttf": "/vendor/fonts/ionicons/ionicons.ttf?id=3eee77cb739fee32c170",
-    "/vendor/fonts/ionicons/ionicons.woff": "/vendor/fonts/ionicons/ionicons.woff?id=c89939211072943380d1",
-    "/vendor/fonts/ionicons/ionicons.woff2": "/vendor/fonts/ionicons/ionicons.woff2?id=eac2de05c13d2b0f4ab4",
-    "/vendor/fonts/linearicons/Linearicons-Free.eot": "/vendor/fonts/linearicons/Linearicons-Free.eot?id=cc6bc0d2c43b220f59e9",
-    "/vendor/fonts/linearicons/Linearicons-Free.svg": "/vendor/fonts/linearicons/Linearicons-Free.svg?id=fb9ed10858b2625b61bd",
-    "/vendor/fonts/linearicons/Linearicons-Free.ttf": "/vendor/fonts/linearicons/Linearicons-Free.ttf?id=3526f8ef3477cc11d112",
-    "/vendor/fonts/linearicons/Linearicons-Free.woff": "/vendor/fonts/linearicons/Linearicons-Free.woff?id=a96ea49f93c3c86367cd",
-    "/vendor/fonts/linearicons/Linearicons-Free.woff2": "/vendor/fonts/linearicons/Linearicons-Free.woff2?id=88d4179ea7cab95a831e",
-    "/vendor/fonts/open-iconic/open-iconic.eot": "/vendor/fonts/open-iconic/open-iconic.eot?id=261223120fd94a8231c3",
-    "/vendor/fonts/open-iconic/open-iconic.otf": "/vendor/fonts/open-iconic/open-iconic.otf?id=7feabb50dff1f7fdffaa",
-    "/vendor/fonts/open-iconic/open-iconic.svg": "/vendor/fonts/open-iconic/open-iconic.svg?id=8217b7ac84b409b12968",
-    "/vendor/fonts/open-iconic/open-iconic.ttf": "/vendor/fonts/open-iconic/open-iconic.ttf?id=12617a297de9177eaf8d",
-    "/vendor/fonts/open-iconic/open-iconic.woff": "/vendor/fonts/open-iconic/open-iconic.woff?id=437a806ffec84cc6170e",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot?id=710009ebd3dadaf70b8a",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg?id=529c3da8f21edf912d26",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf?id=366b11c59c8c1f0bdee6",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff?id=b343d2f7fb9a7f55f98a"
+    "/entry-point.js": "/entry-point.js",
+    "/vendor/js/layout-helpers.js": "/vendor/js/layout-helpers.js",
+    "/vendor/js/material-ripple.js": "/vendor/js/material-ripple.js",
+    "/vendor/js/theme-settings.js": "/vendor/js/theme-settings.js",
+    "/vendor/fonts/fontawesome.css": "/vendor/fonts/fontawesome.css",
+    "/vendor/fonts/ionicons.css": "/vendor/fonts/ionicons.css",
+    "/vendor/fonts/linearicons.css": "/vendor/fonts/linearicons.css",
+    "/vendor/fonts/open-iconic.css": "/vendor/fonts/open-iconic.css",
+    "/vendor/fonts/pe-icon-7-stroke.css": "/vendor/fonts/pe-icon-7-stroke.css",
+    "/vendor/fonts/fontawesome/fa-brands-400.eot": "/vendor/fonts/fontawesome/fa-brands-400.eot",
+    "/vendor/fonts/fontawesome/fa-brands-400.svg": "/vendor/fonts/fontawesome/fa-brands-400.svg",
+    "/vendor/fonts/fontawesome/fa-brands-400.ttf": "/vendor/fonts/fontawesome/fa-brands-400.ttf",
+    "/vendor/fonts/fontawesome/fa-brands-400.woff": "/vendor/fonts/fontawesome/fa-brands-400.woff",
+    "/vendor/fonts/fontawesome/fa-brands-400.woff2": "/vendor/fonts/fontawesome/fa-brands-400.woff2",
+    "/vendor/fonts/fontawesome/fa-regular-400.eot": "/vendor/fonts/fontawesome/fa-regular-400.eot",
+    "/vendor/fonts/fontawesome/fa-regular-400.svg": "/vendor/fonts/fontawesome/fa-regular-400.svg",
+    "/vendor/fonts/fontawesome/fa-regular-400.ttf": "/vendor/fonts/fontawesome/fa-regular-400.ttf",
+    "/vendor/fonts/fontawesome/fa-regular-400.woff": "/vendor/fonts/fontawesome/fa-regular-400.woff",
+    "/vendor/fonts/fontawesome/fa-regular-400.woff2": "/vendor/fonts/fontawesome/fa-regular-400.woff2",
+    "/vendor/fonts/fontawesome/fa-solid-900.eot": "/vendor/fonts/fontawesome/fa-solid-900.eot",
+    "/vendor/fonts/fontawesome/fa-solid-900.svg": "/vendor/fonts/fontawesome/fa-solid-900.svg",
+    "/vendor/fonts/fontawesome/fa-solid-900.ttf": "/vendor/fonts/fontawesome/fa-solid-900.ttf",
+    "/vendor/fonts/fontawesome/fa-solid-900.woff": "/vendor/fonts/fontawesome/fa-solid-900.woff",
+    "/vendor/fonts/fontawesome/fa-solid-900.woff2": "/vendor/fonts/fontawesome/fa-solid-900.woff2",
+    "/vendor/fonts/ionicons/ionicons.eot": "/vendor/fonts/ionicons/ionicons.eot",
+    "/vendor/fonts/ionicons/ionicons.svg": "/vendor/fonts/ionicons/ionicons.svg",
+    "/vendor/fonts/ionicons/ionicons.ttf": "/vendor/fonts/ionicons/ionicons.ttf",
+    "/vendor/fonts/ionicons/ionicons.woff": "/vendor/fonts/ionicons/ionicons.woff",
+    "/vendor/fonts/ionicons/ionicons.woff2": "/vendor/fonts/ionicons/ionicons.woff2",
+    "/vendor/fonts/linearicons/Linearicons-Free.eot": "/vendor/fonts/linearicons/Linearicons-Free.eot",
+    "/vendor/fonts/linearicons/Linearicons-Free.svg": "/vendor/fonts/linearicons/Linearicons-Free.svg",
+    "/vendor/fonts/linearicons/Linearicons-Free.ttf": "/vendor/fonts/linearicons/Linearicons-Free.ttf",
+    "/vendor/fonts/linearicons/Linearicons-Free.woff": "/vendor/fonts/linearicons/Linearicons-Free.woff",
+    "/vendor/fonts/linearicons/Linearicons-Free.woff2": "/vendor/fonts/linearicons/Linearicons-Free.woff2",
+    "/vendor/fonts/open-iconic/open-iconic.eot": "/vendor/fonts/open-iconic/open-iconic.eot",
+    "/vendor/fonts/open-iconic/open-iconic.otf": "/vendor/fonts/open-iconic/open-iconic.otf",
+    "/vendor/fonts/open-iconic/open-iconic.svg": "/vendor/fonts/open-iconic/open-iconic.svg",
+    "/vendor/fonts/open-iconic/open-iconic.ttf": "/vendor/fonts/open-iconic/open-iconic.ttf",
+    "/vendor/fonts/open-iconic/open-iconic.woff": "/vendor/fonts/open-iconic/open-iconic.woff",
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot",
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg",
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf",
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff"
 }
