--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -41,6 +41,5 @@
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.eot",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.svg",
     "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.ttf",
-    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff",
-    "/entry-point.5e2fae51b7da1d05a617.hot-update.js": "/entry-point.5e2fae51b7da1d05a617.hot-update.js"
+    "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff": "/vendor/fonts/pe-icon-7-stroke/Pe-icon-7-stroke.woff"
 }
