--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "c3": "^0.7.20",
         "chart.js": "~2.8.0",
         "core-js": "^2.6.12",
-        "cross-env": "~6.0.3",
+        "cross-env": "^6.0.3",
         "echarts": "^4.9.0",
         "idle-vue": "~2.0.5",
         "ladda": "~2.0.1",
