--- a/public/web.config
+++ b/public/web.config
@@ -52,6 +52,16 @@
                     <add method="OPTIONS" />
                 </allowMethods>
             </add>
+            <add origin="http://constructor.test" allowCredentials="true">
+                <allowHeaders allowAllRequestedHeaders="true" />
+                <allowMethods>
+                    <add method="GET" />
+                    <add method="POST" />
+                    <add method="PUT" />
+                    <add method="DELETE" />
+                    <add method="OPTIONS" />
+                </allowMethods>
+            </add>
         </cors>
         <staticContent>
             <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
