--- a/public/web.config
+++ b/public/web.config
@@ -40,6 +40,7 @@
                     <add method="PUT" />
                     <add method="DELETE" />
                     <add method="OPTIONS" />
+                    <add method="PATCH" />
                 </allowMethods>
             </add>
             <add origin="https://test.emiit.ru" allowCredentials="true">
