--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.2",
+        "darkaonline/l5-swagger": "6.*",
         "doctrine/dbal": "^2.12.1",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
